# interbotix_ros_manipulators

interbotix_ros_xsarms/grasping/: package.xml  setup.py
interbotix_ros_xsarms/grasping/grasping/: grasping_client.py
interbotix_ros_xsarms/interbotix_xsarm_control/config/: modes.yaml
interbotix_ros_xsarms/interbotix_xsarm_control/launch/: xsarm_control.launch.py
interbotix_ros_xsarms/interbotix_xsarm_descriptions/launch/: xsarm_description.launch.py
interbotix_ros_xsarms/interbotix_xsarm_descriptions/meshes/wx250s_meshes/: finger_left.stl  finger_right.stl  wx250s_1_base.stl
interbotix_ros_xsarms/interbotix_xsarm_descriptions/urdf/: wx250s.urdf.xacro  wx250s_control.xacro  wx250s_control_sim.xacro
interbotix_ros_xsarms/interbotix_xsarm_moveit/: CMakeLists.txt  package.xml
interbotix_ros_xsarms/interbotix_xsarm_moveit/config/: moveit.rviz  sensors_kinect_depthmap.yaml  sensors_kinect_pointcloud.yaml
interbotix_ros_xsarms/interbotix_xsarm_moveit/config/controllers/: 4dof_controllers.yaml
interbotix_ros_xsarms/interbotix_xsarm_moveit/config/scenes/: camera_behind.scene
interbotix_ros_xsarms/interbotix_xsarm_moveit/config/srdf/: wx250s.srdf
interbotix_ros_xsarms/interbotix_xsarm_moveit/launch/: move_group.launch.py  xsarm_moveit.launch.py
interbotix_ros_xsarms/interbotix_xsarm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
interbotix_ros_xsarms/interbotix_xsarm_moveit_config/config/: kinematics.yaml  moveit.rviz  ompl_planning.yaml
interbotix_ros_xsarms/interbotix_xsarm_moveit_config/config/controllers/: 5dof_controllers.yaml  6dof_controllers.yaml
interbotix_ros_xsarms/interbotix_xsarm_moveit_config/config/srdf/: wx250s.srdf  wx250s_sim.srdf
interbotix_ros_xsarms/interbotix_xsarm_moveit_config/launch/: move_group.launch.py  move_group_sim.launch.py  xsarm_moveit.launch.py
interbotix_ros_xsarms/interbotix_xsarm_ros_control/: CMakeLists.txt  package.xml
interbotix_ros_xsarms/interbotix_xsarm_ros_control/config/: 4dof_controllers.yaml  5dof_controllers.yaml  6dof_controllers.yaml  6dof_controllers_sim.yaml
interbotix_ros_xsarms/interbotix_xsarm_ros_control/launch/: xsarm_ros_control.launch.py  xsarm_ros_control_sim.launch.py
interbotix_ros_xsarms/locobot_arms/: CMakeLists.txt  package.xml
interbotix_ros_xsarms/locobot_arms/include/locobot_arms/: locobot_arms_action_server.hpp
interbotix_ros_xsarms/locobot_arms/launch/: locobot_arms.launch.py
interbotix_ros_xsarms/locobot_arms/src/: locobot_arms_action_server.cpp
interbotix_ros_xsarms/raya_cv_msgs/: CMakeLists.txt  package.xml
interbotix_ros_xsarms/raya_cv_msgs/msg/: Detection2D.msg  DetectionAT.msg  DetectionsAT.msg  Recognition2D.msg  Recognitions2D.msg
interbotix_ros_xsarms/raya_cv_msgs/srv/: DisableModel.srv  EnableModel.srv  EnablePointcloud.srv  GetAvailableModels.srv  GetGripperPoses.srv  SetPclId.srv  SetPclName.srv  TrainModel.srv
